--- a/next-app/package.json
+++ b/next-app/package.json
@@ -12,4 +12,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
+  ,
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "18.2.0",
+    "@types/node": "^20.5.6"
+  }
 }
