--- a/next-app/package.json
+++ b/next-app/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "typescript": "^5.3.3",
     "@types/react": "18.2.0",
-    "@types/node": "^20.5.6"
+    "@types/node": "^20.5.6",
+    "tailwindcss": "3.4.16",
+    "postcss": "8.4.25",
+    "autoprefixer": "10.4.14"
   }
 }
