行ってくれ

--- a/next-app/package.json
+++ b/next-app/package.json
@@ -1,11 +1,12 @@
 {
   "name": "aislesoft-next-privacy",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
-    "build": "next build",
-    "start": "next start -p 3000"
+  "dev": "next dev -p 3000",
+  "build": "next build",
+  "start": "next start -p 3000",
+  "type-check": "tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
     "next": "14.0.0",
