--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "vercel-build": "cd next-app && npm ci && npm run build"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-toggle": "^1.1.0"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
+    "@types/node": "^20.5.6",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "4.3.4",
     "esbuild": "0.25.5",
     "globals": "15.12.0",
+    "next": "14.0.0",
     "tailwindcss": "3.4.16",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.5.6",
-    "vite": "6.3.5",
-    "next": "14.0.0"
+    "typescript": "^5.9.3",
+    "vite": "6.3.5"
   },
   "alias": {
     "@/*": "./src/components/ui/$1"
