--- a/next-app/tsconfig.json
+++ b/next-app/tsconfig.json
@@ -25,7 +25,10 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "../src/**/*.ts",
+    "../src/**/*.tsx",
+    "../src/**/*.d.ts"
   ],
   "exclude": [
     "node_modules"
