chore: remove legacy dev-iframe and Vite config; remove .html redirects

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -19,7 +19,5 @@
     "noUncheckedSideEffectImports": true,
     "types": ["node"]
   },
-  "include": [
-    "vite.config.ts"
-  ]
+  "include": []
 }
